# ffmpeglib

./: CMakeLists.txt  conandata.yml  ffmpeg.cmake
bin_osX/: libavdevice.58.dylib  libavutil.56.dylib  libpostproc.55.dylib  libswresample.3.dylib  libswscale.5.dylib
bin_osX-aarch64/: ffmpeg  ffplay  ffprobe  libswresample.3.dylib  libswscale.5.dylib
bin_osx-aarch64/: libavdevice.58.dylib  libavfilter.7.dylib  libavformat.58.dylib  libavutil.56.dylib  libswresample.3.dylib  libswscale.5.dylib
lib/: libavdevice.so.58  libavfilter.so.7.110.100  libavformat.so.58  libavutil.so.56.70.100  libswresample.so.3.9.100
